--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- hero section -->
+    <section class="hero">
+        <div class="hero-section-contents half-width">
+            <div class="hero-section-border">
+                <h1>Remain Attentive on</h1>
+                <h1 class="text-color">Mission 2022</h1>
+            </div>
+            <p>To become a developer, we always have to work hard. We also need some push to get to work. For that reason, I joined
+            programming hero, and now I know how to code.</p>
+            <div>
+                <a href="#" class="btn">See More</a>
+            </div>
+            <h3>Scroll down to know more about us</h3>
+        </div>
+        <div class="hero-section-img half-width"></div>
+    </section>
 </body>
 </html>
