goal section added

--- a/index.html
+++ b/index.html
@@ -27,5 +27,32 @@
         </div>
         <div class="hero-section-img half-width"></div>
     </section>
+    <!-- goals section -->
+    <section class="goal">
+        <h2>My Tasks in <span class="text-color">2022</span></h2>
+        <div class="goal-cards">
+            <div class="goal-card goal-card-1">
+                <img src="./images/illustrators/illustrator-1.png" height="111px" width="125px" alt="">
+                <h1>Goals</h1>
+                <p>No doubt I had a wonderful year and it is coming to an end. I still can’t believe how fast 2021 got over and it's just a
+                few days left for 2022. As a normal programmer, I do have a plan for making my 2022 more productive and successful for
+                me.</p>
+            </div>
+            <div class="goal-card goal-card-2">
+                <img src="./images/illustrators/illustrator-2.png" height="112px" width="125px" alt="">
+                <h1>Vision</h1>
+                <p>No doubt I had a wonderful year and it is coming to an end. I still can’t believe how fast 2021 got over and it's just a
+                few days left for 2022. As a normal programmer, I do have a plan for making my 2022 more productive and successful for
+                me.</p>
+            </div>
+            <div class="goal-card goal-card-3">
+                <img src="./images/illustrators/illustrator-3.png" height="111px" width="125px" alt="">
+                <h1>Aim</h1>
+                <p>No doubt I had a wonderful year and it is coming to an end. I still can’t believe how fast 2021 got over and it's just a
+                few days left for 2022. As a normal programmer, I do have a plan for making my 2022 more productive and successful for
+                me.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
