develop section added

--- a/index.html
+++ b/index.html
@@ -54,5 +54,19 @@
             </div>
         </div>
     </section>
+    <!-- develop section -->
+    <section class="develop">
+        <div class="half-width develop-section-img">
+            <img src="./images/pictures/coding.png" height="400px" width="400px" alt="">
+        </div>
+        <div class="half-width develop-section-contents">
+            <h1>Develop <br>
+            Without Boundaries</h1>
+            <p>I am so happy that I finalized my goals which I will try my best to accomplish in 2022 and have a successful year. Most
+            importantly I will keep a track of my mental health and energy levels in the first 3 months of a new year which will
+            help me to do some changes accordingly.</p>
+            <a href="#" class="btn">Read the Documentation</a>
+        </div>
+    </section>
 </body>
 </html>
