community section added

--- a/index.html
+++ b/index.html
@@ -68,5 +68,22 @@
             <a href="#" class="btn">Read the Documentation</a>
         </div>
     </section>
+    <!-- Community section -->
+    <section class="community">
+        <div class="half-width community-section-contents">
+            <div>
+                <h1>Understand our <br>
+                    Global Community</h1>
+                <p>As a programmer upgrading one's knowledge is the most necessary aspect one must consider. For me upgrading my skills
+                    will be the most important part of 2022. I am sure, that I will be able to build a study track for the skills which
+                    I
+                    have already decided to learn.</p>
+                <div><a href="#" class="btn">Read the Documentation</a></div>
+            </div>
+        </div>
+        <div class="half-width community-section-img">
+            <img src="./images/pictures/project.png" height="400px" width="400px" alt="">
+        </div>
+    </section>
 </body>
 </html>
