extra section and images added

--- a/index.html
+++ b/index.html
@@ -85,5 +85,34 @@
             <img src="./images/pictures/project.png" height="400px" width="400px" alt="">
         </div>
     </section>
+    <!-- extra section -->
+    <section class="extra">
+        <h2>Our <span class="text-color">Team</span></h2>
+        <div class="extra-cards">
+            <div class="extra-card extra-card-1">
+                <div class="extra-card-img-1"></div>
+                <h1>Jhankar Mahbub</h1>
+                <p>He is a driven, teach classes on javascript and has shown many new front-end concepts to his colleagues through Lunch &
+                Learn sessions. He is a hard worker and understands the difference between task oriented and goal oriented outcomes.</p>
+            </div>
+            <div class="extra-card extra-card-2">
+                <div class="extra-card-img-2"></div>
+                <h1>Farhan Xovar</h1>
+                <p>No doubt I had a wonderful year and it is coming to an end. I still can’t believe how fast 2021 got over and
+                    it's just a
+                    few days left for 2022. As a normal programmer, I do have a plan for making my 2022 more productive and
+                    successful for
+                    me.</p>
+            </div>
+            
+            <div class="extra-card extra-card-3">
+                <div class="extra-card-img-3"></div>
+                <h1>programming-hero Team</h1>
+                <p>This Course helped me a lot to understand development process in web development and build real world projects which
+                made my interviews easy and comfortable . Their support System is awesome . i would Highly recommend anyone about this
+                course if he/she really wants to get into this sector and wiling to work hard for it</p>
+            </div> 
+        </div>
+    </section>
 </body>
 </html>
