--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Assignment</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,10 +23,7 @@
     <!-- hero section -->
     <section class="hero">
         <div class="hero-section-contents half-width">
-            <div class="hero-section-border">
-                <h1>Remain Attentive on</h1>
-                <h1 class="text-color">Mission 2022</h1>
-            </div>
+                <h1>Remain Attentive on <br> <span class="text-color">Mission 2022</span></h1>
             <p>To become a developer, we always have to work hard. We also need some push to get to work. For that reason, I joined
             programming hero, and now I know how to code.</p>
             <div>
@@ -104,7 +110,6 @@
                     successful for
                     me.</p>
             </div>
-            
             <div class="extra-card extra-card-3">
                 <div class="extra-card-img-3"></div>
                 <h1>programming-hero Team</h1>
@@ -114,5 +119,10 @@
             </div> 
         </div>
     </section>
+    <!-- footer section -->
+    <footer>
+        <h1>Goal <span class="text-color">2022</span></h1>
+        <p>Hard work, Industriousness, and Decisiveness for 2022</p>
+    </footer>
 </body>
 </html>
